# atlas

./: .astylerc  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  appveyor.yml  runastyle.sh
.sublime-text/: atlas.sublime-project  snippets.sublime-project
apps/: CMakeLists.txt
apps/atlas/: CMakeLists.txt  main.cpp
apps/viewer/: CMakeLists.txt  Viewer.cpp
data/: example_scene.atlas
doc/: CMakeLists.txt  Doxyfile.in
include/atlas/: CMakeLists.txt
include/atlas/core/: Atlas.hpp  CMakeLists.txt  Cartographic.hpp
include/atlas/graphics/: CMakeLists.txt  Renderer.hpp  SceneGraph.hpp
lib/: CMakeLists.txt
lib/CImg/: CImg.h
lib/glm/detail/: dummy.cpp
lib/json/: CMakeLists.txt  jsoncpp.cpp
lib/lest/: lest.hpp
lib/vma/: vk_mem_alloc.h
shaders/: CMakeLists.txt  blank.frag  blank.vert  color.frag  compile.py  debug.frag  default.frag  default.material  default.vert  shaderlib.inc  solid.frag  terrain.frag  tile.frag  tile.vert  unlit.frag  unlit.vert  unlit.vert.spv  vertexcolor.frag
shaders/include/: atlas.glsl  material.glsl
src/: CMakeLists.txt
src/atlas/: CMakeLists.txt
src/atlas/core/: Atlas.cpp  Atlas.hpp  Cartographic.cpp  Color.cpp  Color.hpp  Constants.hpp  Ellipsoid.cpp  Ellipsoid.hpp  IO.cpp  IO.hpp  Math.cpp  Math.hpp  Plane.hpp  bounds.cpp  bounds.hpp  cartographic.cpp  cartographic.hpp  common.hpp  constants.hpp  ellipsoid.cpp  ellipsoid.hpp  image.cpp  image.hpp  imageformat.hpp  math.cpp  math.hpp  quadtree.cpp  quadtree.hpp  quadtreenode.cpp  quadtreenode.hpp  rect.hpp  region.cpp  region.hpp  size.hpp  spatialreference.hpp
src/atlas/core/spatialindex/: evaluator.hpp  quadtree.cpp  quadtree.hpp  quadtreenode.cpp  quadtreenode.hpp
src/atlas/core/srs/: ellipsoid.cpp  ellipsoid.hpp  equirectangular.cpp  equirectangular.hpp  spatialreference.hpp
src/atlas/graphics/: AtlasGraphics.hpp  Blank.cpp  Blank.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Drawable.cpp  Drawable.hpp  Earth.cpp  Earth.hpp  Framebuffer.cpp  Framebuffer.hpp  GraphicsObject.cpp  GraphicsObject.hpp  Image.cpp  Image.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshObject.cpp  MeshObject.hpp  Node.cpp  Node.hpp  RenderTarget.hpp  Renderer.cpp  Renderer.hpp  RenderingOptions.cpp  RenderingOptions.hpp  Scene.cpp  Scene.hpp  SceneGraph.hpp  Shader.cpp  Shader.hpp  ShaderStore.hpp  SurfaceTile.cpp  SurfaceTile.hpp  SwapchainSupportDetails.hpp  Time.cpp  Time.hpp  (+2 more)
src/atlas/graphics/debug/: Axes.cpp  Axes.hpp  Point.cpp  Point.hpp
src/atlas/graphics/objects/: Earth.cpp  Earth.hpp  SurfaceTile.cpp  SurfaceTile.hpp
src/atlas/graphics/primitives/: Point.cpp  Point.hpp  Primitives.hpp  Tile.cpp  Tile.hpp
src/atlas/io/: common.hpp  constantimagesource.cpp  constantimagesource.hpp  debugimagesource.cpp  debugimagesource.hpp  fileimagesource.cpp  fileimagesource.hpp  imagesource.cpp  imagesource.hpp  input.hpp  request.hpp  response.hpp  utils.cpp  utils.hpp
src/atlas/renderer/: allocator.cpp  allocator.hpp  binding_info.hpp  bindinginfo.hpp  common.hpp  context.cpp  context.hpp  entity_data.cpp  entity_data.hpp  entity_properties.hpp  entityproperties.hpp  framebuffer.cpp  framebuffer.hpp  globalproperties.hpp  instance.cpp  instance.hpp  instance_properties.hpp  material.cpp  material.hpp  materialproperties.hpp  mesh.cpp  mesh.hpp  pipeline.cpp  pipeline.hpp  texture.cpp  texture.hpp  uniformbuffer.cpp  uniformbuffer.hpp  vertex.hpp  viewport.hpp
src/atlas/scene/: camera.cpp  camera.hpp  common.hpp  entity.cpp  entity.hpp  frameinfo.hpp  geographicgrid.cpp  geographicgrid.hpp  globe.cpp  globe.hpp  globeevaluator.cpp  globeevaluator.hpp  layer.hpp  meshbuilder.cpp  meshbuilder.hpp  scene.cpp  scene.hpp  tile.cpp  tile.hpp  time.cpp  time.hpp  transform.cpp  transform.hpp  view.cpp  view.hpp  viewport.hpp
src/atlas/viewer/: common.hpp  parameters.hpp  viewer.cpp  viewer.hpp
src/core/: Atlas.cpp  CMakeLists.txt  Cartographic.cpp
src/graphics/: Renderer.cpp  SwapchainSupportDetails.hpp
src/test/core/: CMakeLists.txt
src/util/: CMakeLists.txt  dummy.cpp
test/: CMakeLists.txt  common.hpp  tests.cpp
test/atlas/renderer/: test_instance.cpp
test/core/: CMakeLists.txt  Cartographic.cpp  Color.cpp  cartographic_spec.cpp  region_spec.cpp
test/core/spatialindex/: quadtreenode_spec.cpp
test/core/srs/: equirectangular_spec.cpp
test/graphics/: CMakeLists.txt  Renderer.cpp  SceneGraph.cpp
test/renderer/: CMakeLists.txt
